# bank-operations-widget

./: .coverage  .env  .env.template  .flake8  .isort.cfg  README.md  create_excel_file.py  example_usage.py  file_parsers.py  gitignore  main.py  processing.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_processing.py
data/: operations.json  operations.xlsx  transactions.csv
examples/: decorators_example.py
src/: decorators.py  file_reader.py  generators.py  logger_config.py  main.py  masks.py  operations.py  processing.py  widget.py
src/external_api/: currency_converter.py
src/utils/: file_reader.py
tests/: __init__.py  conftest.py  test_currency_converter.py  test_decorators.py  test_file_parsers.py  test_file_reader.py  test_generators.py  test_masks.py  test_operations.py  test_processing.py  test_widget.py
